--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -1,4 +1,4 @@
-name: Profile-3D-Contrib
+name: GitHub-Profile-3D-Contrib
 
 on:
   schedule: # 03:00 JST == 18:00 UTC
@@ -8,10 +8,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: profile-3d-contrib
+    name: generate-github-profile-3d-contrib
     steps:
       - uses: actions/checkout@v3
-      - uses: deepanshu414/deepanshu414@0.7.1
+      - uses: deepanshu414/deepanshu414@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USERNAME: ${{ github.repository_owner }}
