--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,7 +11,7 @@ jobs:
 
 
       - name: Personal metrics
-        uses:  deepanshu414/metrics@master
+        uses:  JayantGoel001/metrics@master
         with:
           filename: metrics.svg
           token: ${{ secrets.METRICS_TOKEN }}
@@ -60,7 +60,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:      
       - name: Personal metrics (detailed)
-        uses: deepanshu414/metrics@master
+        uses: JayantGoel001/metrics@master
         with:
           filename: metrics.detailed.svg
           token: ${{ secrets.METRICS_TOKEN }}
@@ -81,7 +81,7 @@ jobs:
           plugin_posts_limit: 2
           plugin_posts_descriptions: yes
           plugin_posts_covers: yes
-          plugin_posts_user: deepanshu414
+          plugin_posts_user: JayantGoel001
           config_timezone: Asia/Kolkata
           plugin_languages_colors: "rainbow"
           plugin_languages_details: bytes-size, percentage
