--- a/.github/workflows/WakaTime.yml
+++ b/.github/workflows/WakaTime.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     - cron: '20 00 * * *'
   workflow_dispatch:
+
 jobs:
   update-readme:
     name: Update Readme with Metrics
@@ -12,8 +13,7 @@ jobs:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.METRICS_TOKEN   }}
-          SHOW_LINES_OF_CODE : "True"
-          SHOW_PROFILE_VIEWS : "False"
-          SHOW_LOC_CHART : "False"
-          SHOW_TITLE : true
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_PROFILE_VIEWS: "False"
+          SHOW_LOC_CHART: "False"
