--- a/.github/workflows/WakaTime.yml
+++ b/.github/workflows/WakaTime.yml
@@ -17,3 +17,21 @@ jobs:
           SHOW_LINES_OF_CODE: "True"
           SHOW_PROFILE_VIEWS: "False"
           SHOW_LOC_CHART: "False"
+          SECTION_NAME: "waka"
+          SHOW_OS: "True"
+          SHOW_PROJECTS: "True"
+          SHOW_EDITORS: "True"
+          SHOW_TIMEZONE: "True"
+          SHOW_COMMIT: "True"
+          SHOW_LANGUAGE: "True"
+          SHOW_LANGUAGE_PER_REPO: "True"
+          SHOW_DAYS_OF_WEEK: "True"
+          SHOW_SHORT_INFO: "True"
+          SHOW_UPDATED_DATE: "True"
+          SHOW_TOTAL_CODE_TIME: "True"
+          COMMIT_BY_ME: "False"
+          COMMIT_MESSAGE: "Updated with Dev Metrics"
+          COMMIT_SINGLE: "False"
+          LOCALE: "en"
+          UPDATED_DATE_FORMAT: "%d/%m/%Y %H:%M:%S"
+          SYMBOL_VERSION: "1"
