--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,7 +1,7 @@
 name: GitHub metrics
 on:
   schedule:
-    - cron: "21 6,18 * **"
+    - cron: "21 6,18 * * *"  # Fixed cron syntax
   workflow_dispatch:
 jobs:
   github-metrics-personal:
